# oksolar-minimal

./: LICENSE  README.md  dark.json  light.json  meson.build  subtempl.py
atom/: atom.less  meson.build
sublime/: meson.build  sublime.tmTheme
sublime3/: meson.build  sublime.sublime-color-scheme
vscode/: meson.build  vscode.json
