custom_target('sublime_dark',
  build_by_default : true,
  input : 'sublime.tmTheme',
  output : 'OKSolar Minimal (dark).tmTheme',
  command : [subtempl, dark, '@INPUT@', '@OUTPUT@']
)

custom_target('sublime_light',
  build_by_default : true,
  input : 'sublime.tmTheme',
  output : 'OKSolar Minimal (light).tmTheme',
  command : [subtempl, light, '@INPUT@', '@OUTPUT@']
)
