custom_target('sublime3_dark',
  build_by_default : true,
  input : 'sublime.sublime-color-scheme',
  output : 'OKSolar Minimal (dark).sublime-color-scheme',
  command : [subtempl, dark, '@INPUT@', '@OUTPUT@']
)

custom_target('sublime3_light',
  build_by_default : true,
  input : 'sublime.sublime-color-scheme',
  output : 'OKSolar Minimal (light).sublime-color-scheme',
  command : [subtempl, light, '@INPUT@', '@OUTPUT@']
)
